manifests/pokefinder/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pokefinder
  namespace: pokefinder
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /health
            pathType: Exact
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /health/db
            pathType: Exact
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /search_pokemon
            pathType: Exact
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /team_coverage
            pathType: Exact
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
